@@ -1,0 +1,12 @@
+
+NODE DEFAULT
+	ICON 100 100 rbox
+	LABELOFFSET S
+	LABEL {node:this:name}
+
+NODE normal 
+	POSITION 200 200
+
+NODE different
+	POSITION 400 200
+	ICON images/red-ball-64.png
